--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/FinalProject/Frontend/node_modules
-/FinalProject/Frontend/RestaurantProject/node_modules
-/FinalProject/Backend/node_modules
+Frontend/node_modules
+Frontend/RestaurantProject/node_modules
+Backend/node_modules
